Fixed dark mode issues

--- a/src/scss/theme/dark/_variables-dark.scss
+++ b/src/scss/theme/dark/_variables-dark.scss
@@ -217,11 +217,6 @@ $card-outline-color: $gray-800-dark !default;
 $card-box-shadow: 0 .75rem 1.5rem transparentize($black-dark, .5) !default;
 
 
-// Badges
-
-$badge-soft-bg-scale: 10 !default;
-
-
 // Auth
 
 $auth-bg: $body-bg !default;
@@ -234,7 +229,7 @@ $avatar-title-bg: $gray-600-dark !default;
 
 // Backgrounds
 
-$bg-soft-scale: 10 !default;
+$bg-soft-scale: 55% !default;
 
 
 // Comment
